--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"license": "MIT",
 	"private": false,
-	"main": "index.js",
-	"version": "1.1.1",
+	"version": "1.1.2",
+	"main": "index.json",
 	"name": "@oly_op/stylelint-config",
 	"description": "@oly_op/stylelint-config",
 	"bugs": "https://github.com/olyop/stylelint-config/issues",
