--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin main"
 	},
 	"dependencies": {
-		"stylelint": "13.13.1",
-		"stylelint-config-sass-guidelines": "8.0.0",
-		"stylelint-scss": "3.19.0"
+		"stylelint": "^14.1.0",
+		"stylelint-config-sass-guidelines": "^9.0.1",
+		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+		"stylelint-scss": "^4.0.0"
 	},
 	"devDependencies": {
-		"typescript": "4.3.2"
+		"typescript": "^4.5.2"
 	}
 }
