--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"license": "MIT",
 	"private": false,
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"main": "index.js",
 	"name": "@oly_op/stylelint-config",
 	"description": "@oly_op/stylelint-config",
@@ -15,13 +15,13 @@
 		"type": "git",
 		"url": "https://github.com/olyop/stylelint-config.git"
 	},
-	"files": [
-		"index.js"
-	],
 	"scripts": {
 		"postpublish": "npm run push",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin main"
+	},
+	"peerDependencies": {
+		"stylelint": "14"
 	},
 	"dependencies": {
 		"stylelint": "^14.1.0",
