--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"type": "module",
 	"license": "MIT",
 	"private": false,
 	"version": "2.0.5",
@@ -17,21 +18,32 @@
 	},
 	"scripts": {
 		"postpublish": "npm run push",
+		"prepublish": "tsc",
 		"sync": "git checkout . && git remote update && git pull",
-		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin main"
+		"push": "git add -A && git commit -m \"Update\" && git push -u origin main"
 	},
 	"peerDependencies": {
 		"stylelint": "14"
 	},
 	"dependencies": {
-		"postcss": "^8.4.4",
-		"postcss-scss": "^4.0.2",
-		"stylelint": "14",
-		"stylelint-config-sass-guidelines": "^9.0.1",
-		"stylelint-declaration-block-no-ignored-properties": "^2.5.0",
-		"stylelint-scss": "^4.0.0"
+		"postcss": "8.4.6",
+		"postcss-scss": "4.0.3",
+		"stylelint-config-sass-guidelines": "9.0.1",
+		"stylelint-declaration-block-no-ignored-properties": "2.5.0"
 	},
 	"devDependencies": {
-		"typescript": "^4.5.2"
+		"@oly_op/eslint-config": "5.1.29",
+		"@oly_op/tsconfig": "1.0.11",
+		"@types/node": "17.0.16",
+		"@typescript-eslint/eslint-plugin": "5.11.0",
+		"@typescript-eslint/parser": "5.11.0",
+		"eslint": "8.8.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-typescript": "16.1.0",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-promise": "6.0.0",
+		"stylelint": "14.4.0",
+		"typescript": "4.5.5"
 	}
 }
