--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
 	},
 	"dependencies": {
 		"postcss": "8.4.6",
+		"postcss-scss": "4.0.3",
 		"stylelint-config-sass-guidelines": "9.0.1",
 		"stylelint-config-standard-scss": "3.0.0",
-		"stylelint-declaration-block-no-ignored-properties": "2.5.0"
+		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
+		"stylelint-scss": "4.1.0"
 	},
 	"devDependencies": {
 		"@oly_op/eslint-config": "5.1.29",
