--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"license": "MIT",
 	"private": false,
 	"main": "index.js",
-	"version": "2.0.20",
+	"version": "2.1.0",
 	"name": "@oly_op/stylelint-config",
 	"description": "@oly_op/stylelint-config",
 	"bugs": "https://github.com/olyop/stylelint-config/issues",
@@ -19,9 +19,12 @@
 		"index.js"
 	],
 	"scripts": {
-		"postpublish": "npm run push",
+		"build": "tsc",
+		"delete-build": "del-cli index.js",
+		"prepublishOnly": "npm-run-all delete-build build",
+		"postpublish": "npm-run-all push delete-build",
 		"sync": "git checkout . && git remote update && git pull",
-		"push": "git add -A && git commit -m \"Update\" && git push -u origin main"
+		"push": "git add -A && git commit -m \"Update\" && git push"
 	},
 	"peerDependencies": {
 		"stylelint": "14"
@@ -32,21 +35,26 @@
 		"stylelint-config-sass-guidelines": "9.0.1",
 		"stylelint-config-standard-scss": "4.0.0",
 		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
-		"stylelint-scss": "4.2.0"
+		"stylelint-scss": "4.3.0"
 	},
 	"devDependencies": {
-		"@oly_op/eslint-config": "5.1.44",
+		"@oly_op/eslint-config": "5.2.4",
 		"@oly_op/tsconfig": "1.0.13",
-		"@types/node": "17.0.38",
-		"@typescript-eslint/eslint-plugin": "5.27.0",
-		"@typescript-eslint/parser": "5.27.0",
-		"eslint": "8.16.0",
+		"@types/node": "18.0.3",
+		"@typescript-eslint/eslint-plugin": "5.30.6",
+		"@typescript-eslint/parser": "5.30.6",
+		"del-cli": "4.0.1",
+		"eslint": "8.19.0",
 		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-base": "15.0.0",
 		"eslint-config-airbnb-typescript": "17.0.0",
 		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-json": "3.1.0",
 		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-prefer-arrow-functions": "3.1.4",
 		"eslint-plugin-promise": "6.0.0",
-		"stylelint": "14.8.5",
-		"typescript": "4.7.2"
+		"npm-run-all": "4.1.5",
+		"stylelint": "14.9.1",
+		"typescript": "4.7.4"
 	}
 }
