--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"extends": "@oly_op/tsconfig/tsconfig.json",
-	"files": [
-		"index.ts"
-	]
+	"compilerOptions": {
+		"target": "ES5",
+		"module": "CommonJS",
+		"skipLibCheck": true
+	}
 }
