--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
 	"extends": "@oly_op",
 	"parserOptions": {
 		"project": "./tsconfig.json"
+	},
+	"rules": {
+		"quote-props": "off",
+		"import/no-import-module-exports": "off"
 	}
 }
