--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
 		"titleBar.inactiveBackground": "#90bfa899",
 		"titleBar.inactiveForeground": "#15202b99"
 	},
-	"peacock.color": "#90bfa8",
+	"peacock.color": "#90bfa8"
 }
