--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": false,
 	"type": "commonjs",
 	"main": "index.js",
-	"version": "2.1.2",
+	"version": "2.1.3",
 	"name": "@oly_op/stylelint-config",
 	"description": "@oly_op/stylelint-config",
 	"bugs": "https://github.com/olyop/stylelint-config/issues",
@@ -11,6 +11,10 @@
 	"author": {
 		"name": "Oliver Plummer",
 		"email": "oliver.plummer@outlook.com"
+	},
+	"volta": {
+		"node": "18.10.0",
+		"npm": "8.19.2"
 	},
 	"repository": {
 		"type": "git",
@@ -23,7 +27,7 @@
 		"build": "tsc",
 		"delete-build": "del-cli index.js",
 		"prepublishOnly": "npm-run-all delete-build build",
-		"postpublish": "npm-run-all push delete-build",
+		"postpublish": "npm-run-all delete-build push",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "git add -A && git commit -m \"Update\" && git push"
 	},
@@ -31,20 +35,23 @@
 		"stylelint": "14"
 	},
 	"dependencies": {
-		"postcss": "8.4.14",
-		"postcss-scss": "4.0.4",
+		"eslint-plugin-unicorn": "44.0.2",
+		"postcss": "8.4.17",
+		"postcss-scss": "4.0.5",
 		"stylelint-config-sass-guidelines": "9.0.1",
 		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
 		"stylelint-scss": "4.3.0"
 	},
 	"devDependencies": {
-		"@oly_op/eslint-config": "5.3.1",
-		"@oly_op/tsconfig": "1.0.13",
-		"@types/node": "18.0.6",
-		"@typescript-eslint/eslint-plugin": "5.30.7",
-		"@typescript-eslint/parser": "5.30.7",
-		"del-cli": "4.0.1",
-		"eslint": "8.20.0",
+		"@oly_op/cspell-dict": "1.0.115",
+		"@oly_op/eslint-config": "6.0.3",
+		"@oly_op/prettier-config": "1.0.13",
+		"@oly_op/tsconfig": "1.0.24",
+		"@types/node": "18.8.3",
+		"@typescript-eslint/eslint-plugin": "5.39.0",
+		"cspell": "6.12.0",
+		"del-cli": "5.0.0",
+		"eslint": "8.25.0",
 		"eslint-config-airbnb": "19.0.4",
 		"eslint-config-airbnb-base": "15.0.0",
 		"eslint-config-airbnb-typescript": "17.0.0",
@@ -52,10 +59,12 @@
 		"eslint-plugin-json": "3.1.0",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-prefer-arrow-functions": "3.1.4",
-		"eslint-plugin-promise": "6.0.0",
+		"eslint-plugin-promise": "6.0.1",
+		"npm-check-updates": "16.3.9",
 		"npm-run-all": "4.1.5",
-		"stylelint": "14.9.1",
+		"prettier": "2.7.1",
+		"stylelint": "14.13.0",
 		"stylelint-config-standard-scss": "5.0.0",
-		"typescript": "4.7.4"
+		"typescript": "4.8.4"
 	}
 }
